style.css
@import url("https://fonts.googleapis.com/css?family=Poppins:wght@300;400;500;600;700;800;900&display=swap");
@import url("https://fonts.googleapis.com/css2?family=Playfair+Display&display=swap");
* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
  text-decoration: none;
  border: none;
  outline: none;
  scroll-behavior: smooth;
  font-family: "Playfair Display", serif;
}

/* Customizing the title */
.swal-title {
  color: #000000 !important; /* Change title color */
}

/* Customizing the text */
.swal-text {
  color: #000000 !important; /* Change text color */
}

/* Customizing the button */
.swal-button {
  background-color:#053314 !important; /* Change button background color */
  color: #ffffff !important; /* Change button text color */
}

/* Customizing the button on hover */
.swal-button:hover {
  background-color:#0e4b16 !important; /* Change button hover background color */
}
:root {
  --bg-color: #053314;
  --second-color: #064b10;
  --txt-color: #fff;
  --main-color: rgb(192, 223, 100);
}

html {
  font-size: 62.5%;
  overflow-x: hidden;
}

body {
  background-color: var(--bg-color);
  color: var(--txt-color);
}
body::-webkit-scrollbar {
  display: none;
}
body {
  scrollbar-width: none;

}
section {
  min-height: 100vh;
  padding: 10rem 9% 2rem;
}
.header {
  position: fixed;
  top: 0;
  left: 0;
  width: 100%;
  padding: 2rem 5%;
  background-color: var(--bg-color);
  display: flex;
  justify-content: space-between;
  align-items: center;
  z-index: 100;
}
.header.sticky {
  border-bottom: 0.1rem solid rgb(252, 187, 223);
}
.header img{
  height: 6rem;
  margin-right: 2rem;
}

.logo {
  font-size: 2vmax;
  color: var(--txt-color);
  font-weight: 600;
  margin-right: 0;
  cursor: default;
}
.navbar a {
  font-size: 1.5vmax;

 }
 section
 {
   min-height: 100vh;
   padding: 10rem 9% 2rem;
 }
 .header
 {
    position: fixed;
    opacity: 0.8;
   top: 0;
   left: 0;
   width:100%;
   padding:2rem 9%;
   background-color: var(--bg-color);
   display: flex;
   justify-content: space-between;
   align-items: center;
   z-index: 100;
 }
 .header.sticky
 {
  border-bottom: .1rem solid rgb(252, 187, 223);
 }

 .logo
 {
    font-size: 2.5rem;
    color: var(--txt-color);
    font-weight: 600;
    cursor: default;
 }
 .navbar a {
  /* position: relative; */
  font-size: 2rem;
  /* left: 118px; */
  color: var(--txt-color);
  margin-left: 4rem;
  transition: 0.3s;
}
.navbar a:hover {
  color: var(--main-color);
}
.navbar a:not(.active):hover {
  color: var(--main-color);
}


.navbar a.active,
.navbar a.active:hover {
  color: var(--main-color);
}
  .navbar.active {
  display: block;
}
.logoImg {
  width: 80px;
  height: auto; /* Use auto to maintain aspect ratio */
  max-width: 100%;

  margin-right: 5px; /* Adjust margin as needed */
}

#menu-icon {
  font-size: 3.6rem;
  color: var(--txt-color);
  display: none;
}

/* .home {
  display: flex;
  justify-content: flex-end;
  align-items: end;
  gap: 2vmax;
  flex-wrap: wrap;
  padding-top: 14vmax;
} */
/* .home-img img {
  width: 70%;
  padding-left: 5vmax
  animation: floatImage 4s ease-in-out infinite;
} */

@keyframes floatImage {
  0% {
    transform: translateY(0);
  }
  50% {
    transform: translateY(-2.4rem);
  }
  100% {
    transform: translateY(0);
  }
}

/* ---------SLIDER CSS------------------------ */


.home {
  width: 100%;
  /* border: 2px solid blue;  */
  padding: 0;
  margin: 0;
  position: relative;
} 
.slider {
  margin: 0;
  min-width: 100%;
  /* border: 2px solid red; */
  min-height: 100vh;  
}

.slide_viewer {
  height: 100vh;
  overflow: hidden;
  position: relative;
}

.slide_group { 
  height: 100%;
  position: relative;
  width: 500%; /* Updated width to accommodate all slides */
  transition: left 0.5s ease; /* Transition effect for smooth slide changes */
}

.slide {
  display: inline-block; /* Display slides in a row */
  height: 100%;
  width: 20%; /* Each slide occupies 20% width */
  background-size: cover;
}

.home-content{
  z-index: 1;
  position: absolute;
  top: 30%;
  left: 25.0%;
  background: rgba(0, 42, 0, 0.441);
  border-radius: 50px;
  padding: 3vmax 3vmax 3vmax 3vmax; 
  filter: blur(0.8px);
  width: 55%;
  height: 25vmax;
  font-size: 4vmax;
}




.home-content h3 {
  font-size: 4.2rem;
  font-weight: 700;
}
.home-content h3:nth-of-type(2) {

  margin-right:5px; /* Adjust margin as needed */
}

 #menu-icon
 {
    font-size: 3.6rem;
    color:var(--txt-color);
    display:none;
 }
 
 /* .home
 {
   display: grid;
   justify-content: center;
   align-items: center;
   grid-template-columns: 600px 300px;
 } */
 /* .home-img img
 {
  width: 20vw;
  animation:floatImage 4s ease-in-out infinite;
 } */

 @keyframes floatImage{
  0%
  {
    transform:translateY(0);
  }
  50%
  {
    transform:translateY(-2.4rem);
  }
  100%
  {
    transform:translateY(0);
  }
 }

 .home-content h3
 {
   font-size: 4.2rem;
   font-weight: 700;
 }
 .home-content h3:nth-of-type(2)
 {
  margin-bottom: 2rem;
}
span {
  color: var(--main-color);
}

.home-img {
  width: 45%;
  height: 30vmax;
}

.home-content h1 {
  font-size: 5.6rem;
  font-weight: 700;
  line-height: 1.3;
}
.social-media a {
  display: inline-flex;
  justify-content: center;
  align-items: center;
  width: 4rem;
  height: 4rem;
  background: transparent;
  border: 0.2rem solid var(--main-color);
  border-radius: 50%;
  font-size: 2rem;
  color: var(--main-color);
  margin: 3rem 1.5rem 3rem 0;
  transition: 0.5sec ease;
}
.socialIcons a:hover {
  background: var(--main-color);
  color: var(--second-color);
  box-shadow: 0 0 1rem var(--main-color);
}

.btn {
  display: inline-block;
  padding: 1rem 2.8rem;
  background: var(--main-color);
  border-radius: 4rem;
  box-shadow: 0 0 1rem var(--main-color);
  font-size: 1.6rem;
  color: var(--second-color);
  letter-spacing: 0.1rem;
  font-weight: 600;
  transition: 0.5sec ease;
}

.email-link {
  position: relative;
  display: inline-block;
}
/* ... */

